--- a/branches/holoeverywhere/res/layout/intake.xml
+++ b/branches/holoeverywhere/res/layout/intake.xml
@@ -25,7 +25,7 @@
 
 <!-- Don't change to <merge>, unless IntakeDialog is adapted accordingly -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<org.holoeverywhere.widget.FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 >
@@ -93,5 +93,5 @@
 	/>
 	    
     
-</FrameLayout>
+</org.holoeverywhere.widget.FrameLayout>
 	 
