--- a/branches/actionbarsherlock/res/layout/time_period_preference.xml
+++ b/branches/actionbarsherlock/res/layout/time_period_preference.xml
@@ -30,7 +30,8 @@
 >
 	<TextView android:id="@+id/message"
 	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
+		android:layout_height="wrap_content"
+		android:textAppearance="?android:attr/textAppearance"
 	/>
 	
 	<TimePicker android:id="@+id/picker" 
