--- a/branches/actionbarsherlock/res/layout/time_period_preference.xml
+++ b/branches/actionbarsherlock/res/layout/time_period_preference.xml
@@ -31,7 +31,8 @@
 	<TextView android:id="@+id/message"
 	    android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:textAppearance="?android:attr/textAppearance"
+		android:textAppearance="?android:attr/textAppearanceInverse"
+
 	/>
 	
 	<TimePicker android:id="@+id/picker" 
