--- a/branches/actionbarsherlock/res/layout/time_period_preference.xml
+++ b/branches/actionbarsherlock/res/layout/time_period_preference.xml
@@ -29,11 +29,15 @@
     android:gravity="center"
 >
 	<TextView android:id="@+id/message"
-	    android:layout_width="wrap_content"
+	    android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:layout_marginLeft="4dip"
+		android:layout_marginRight="4dip"
+		android:layout_marginBottom="4dip"
 		
-  		style="@android:style/TextAppearance.Theme.Dialog"  
-
+		android:minLines="2"
+		android:gravity="center_horizontal"
+		android:textAppearance="?android:attr/textAppearanceSmall"
 	/>
 	
 	<TimePicker android:id="@+id/picker" 
