--- a/branches/actionbarsherlock/res/values-v11/themes.xml
+++ b/branches/actionbarsherlock/res/values-v11/themes.xml
@@ -23,14 +23,8 @@
 -->
 
 <resources>	
-	
-	<style name="_ApiSpecificLightTheme" parent="@android:style/Theme.Holo.Light" />
-	<style name="_ApiSpecificDarkTheme" parent="@android:style/Theme.Holo" />
-	
-	<style name="BottomBar">
-		<item name="android:background">@null</item>
-	</style>
-	
-	<style name="DialogTheme" parent="@android:style/Theme.Holo.Light.Dialog" />
-	
+	<style name="Theme.RxDroid.Dialog" parent="@android:style/Theme.Holo.Light.Dialog" />
+	<style name="Theme.RxDroid.BottomBar">
+-		<item name="android:background">@null</item>
+-	</style>
 </resources>
