--- a/branches/actionbarsherlock/res/values-v14/themes.xml
+++ b/branches/actionbarsherlock/res/values-v14/themes.xml
@@ -22,7 +22,9 @@
  */
 -->
 
-<resources>	    
+<resources>
+    <!-- OLD    
 	<style name="DefaultTheme" parent="@style/LightTheme" />
 	<style name="_ApiSpecificLightTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar" />
+	--> 
 </resources>
