--- a/branches/actionbarsherlock/res/values/themes.xml
+++ b/branches/actionbarsherlock/res/values/themes.xml
@@ -24,13 +24,8 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:rxdroid="http://schemas.android.com/apk/res/at.jclehner.rxdroid"
->
-	<style name="DefaultTheme" parent="@style/DarkTheme" />
-	<style name="DefaultTheme.NoAnimation" parent="@style/DefaultTheme">
-		<item name="android:windowAnimationStyle">@null</item>		
-	</style>
-	
-	<style name="LightTheme" parent="@style/Theme.Sherlock.Light.DarkActionBar">
+>	
+	<style name="Theme.RxDroid" parent="@style/Theme.Sherlock.Light.DarkActionBar">
 		<item name="drugIconTablet">@drawable/ic_drug_tablet_black</item>
 		<item name="drugIconTube">@drawable/ic_drug_tube_black</item>
 		<item name="drugIconGlass">@drawable/ic_drug_glass_black</item>
@@ -62,73 +57,33 @@
 		<item name="iconOverflow">@drawable/ic_menu_overflow_black</item>
 		<item name="iconList">@drawable/ic_list_black</item>
 		
-		<item name="actionIconExpandAll">@drawable/ic_menu_expand_all_white</item>
-		<item name="actionIconCollapseAll">@drawable/ic_menu_collapse_all_white</item>
+		<item name="actionIconExpandAll">@drawable/ic_action_expand_all</item>
+		<item name="actionIconCollapseAll">@drawable/ic_action_collapse_all</item>
 				
 		<item name="dividerColor">@color/list_divider_light</item>
 		
 		<item name="android:windowAnimationStyle">@null</item>
-		<item name="android:alertDialogStyle">@style/DialogTheme</item>
-				
+		<item name="android:alertDialogStyle">@style/Theme.RxDroid.Dialog</item>				
 	</style>
 	
-	<style name="DarkTheme" parent="@style/Theme.Sherlock">
-		<item name="drugIconTablet">@drawable/ic_drug_tablet_white</item>
-		<item name="drugIconTube">@drawable/ic_drug_tube_white</item>
-		<item name="drugIconGlass">@drawable/ic_drug_glass_white</item>
-		<item name="drugIconSyringe">@drawable/ic_drug_syringe_white</item>
-		<item name="drugIconRing">@drawable/ic_drug_ring_white</item>
-		
-		<item name="doseStatusTaken">@drawable/ic_dose_taken</item>
-		<item name="doseStatusMissed">@drawable/ic_dose_forgotten</item>
-		<item name="doseStatusIgnored">@drawable/ic_dose_ignored</item>
-		
-		<item name="textColorClickable">@color/white_clickable</item>
-													
-		<item name="colorStatusMissed">#ad3030</item>
-		<item name="colorStatusSkipped">#ff6600</item>
-		<item name="colorStatusTaken">#536800</item>	
-		
-		<item name="bgColorLogGroup">@android:color/transparent</item>
-		<item name="bgColorLogChild">#111</item>
-		
-		<item name="iconLowSupplies">@drawable/ic_low_supply_warning_white</item>
-		<item name="iconMissedDose">@drawable/ic_warning_white</item>
-		<item name="iconArrowRight">@drawable/ic_arrow_right_white</item>		
-		<item name="iconLock">@drawable/ic_menu_lock_white</item>
-		<item name="iconTime">@drawable/ic_menu_time_white</item>
-		<item name="iconPicture">@drawable/ic_menu_picture_white</item>
-		<item name="iconInfo">@drawable/ic_menu_info_white</item>		
-		<item name="iconWarning">@drawable/ic_menu_warning_white</item>
-		<item name="iconStorage">@drawable/ic_menu_storage_white</item>		
-		<item name="iconOverflow">@drawable/ic_menu_overflow_white</item>		
-		<item name="iconList">@drawable/ic_list_white</item>
-		
-		<item name="actionIconExpandAll">@drawable/ic_menu_expand_all_black</item>
-		<item name="actionIconCollapseAll">@drawable/ic_menu_collapse_all_black</item>
-		
-		<item name="dividerColor">@color/list_divider_dark</item>
-		
-		<item name="android:windowAnimationStyle">@null</item>
-	</style>
-	
-	<style name="TextAppearance.Large.Clickable" parent="@android:style/TextAppearance.Large">
-		<item name="android:textColor">?attr/textColorClickable</item>
-	</style>	
-	
-	<style name="_ApiSpecificLightTheme" parent="@android:style/Theme.Light" />
-	<style name="_ApiSpecificDarkTheme" parent="@android:style/Theme" />
-	
-	<style name="BottomBar">
-		<item name="android:background">@android:drawable/bottom_bar</item>
+	<style name="Theme.RxDroid.NoAnimation" parent="@style/Theme.RxDroid">
+		<item name="android:windowAnimationStyle">@null</item>		
 	</style>
 	
 	<!-- 
 	AlertDialog text color fix thanks to Shawn Castrianni, see: 
 	http://groups.google.com/group/android-developers/browse_thread/thread/f0b34621d3a70c4b 
 	-->
-	<style name="DialogTheme" parent="@android:style/Theme.Light">
+	<style name="Theme.RxDroid.Dialog" parent="@android:style/Theme.Dialog">
 	   <item name="android:textColor">?android:attr/textColorPrimaryInverseDisableOnly</item>
+	</style>
+	
+	<style name="Theme.RxDroid.BottomBar">
+-		<item name="android:background">@android:drawable/bottom_bar</item>
+-	</style>		
+	
+	<style name="TextAppearance.Large.Clickable" parent="@android:style/TextAppearance.Large">
+		<item name="android:textColor">?attr/textColorClickable</item>
 	</style>
 	
 </resources>
