--- a/branches/actionbarsherlock/res/layout/stub_missed_dose_indicator.xml
+++ b/branches/actionbarsherlock/res/layout/stub_missed_dose_indicator.xml
@@ -34,5 +34,5 @@
 	android:clickable="true"
   	android:onClick="onMissedIndicatorClicked"
   	
-  	android:background="@drawable/generic_background"
+  	android:background="?attr/selectableItemBackground"
 />
