--- a/branches/actionbarsherlock/res/layout/log_group.xml
+++ b/branches/actionbarsherlock/res/layout/log_group.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/log_group_height"
+    android:layout_height="wrap_content"
     android:background="?attr/bgColorLogGroup"
 >
 
     <ImageView android:id="@+id/img_status" 
         android:layout_width="30dip"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginTop="9dip"
         android:layout_marginBottom="9dip"
         
