--- a/branches/actionbarsherlock/res/values/colors.xml
+++ b/branches/actionbarsherlock/res/values/colors.xml
@@ -23,10 +23,9 @@
 -->
 
 <resources>
-	<color name="active_text_light">#ff8800</color>
-	<color name="active_text_dark">#ffbb33</color>
-	<color name="background_listview_element_light">#dddddd</color>
-	<color name="background_listview_element_dark">#222222</color>
+	<color name="active_text_light">#0099cc</color>
+	<color name="active_text_dark">#33b5e5</color>
+	
 	<color name="list_divider_dark">#1b1b1b</color>
 	<color name="list_divider_light">#d2d2d2</color>
 </resources>
