--- a/branches/actionbarsherlock/res/values/keys.xml
+++ b/branches/actionbarsherlock/res/values/keys.xml
@@ -49,4 +49,5 @@
 	<item type="string" name="key_use_smart_sort">use_smart_sort</item>
 	<item type="string" name="key_language">language</item>
 	<item type="string" name="key_use_backup_framework">use_backup_framework</item>
+	<item type="string" name="key_skip_dose_dialog">skip_dose_dialog</item>
 </resources>
